# kme

./: .gitignore  Dockerfile  README.md  diario.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  swagger.yaml
.github/workflows/: t.yml  tests.yml
KME/: __main__.py  encoder.py  util.py
KME/controllers/: default_controller.py
KME/models/: __init__.py  base_model_.py  error.py  key.py  key_container.py  key_i_ds.py  key_i_ds_key_i_ds.py  key_request.py  status.py
KME/tests/: conftest.py  test_default_controller.py
api/: openapi.yaml  swagger.yaml
docs/: API_documentation.md  README_given.md
key_manager/models/: key.py  key_manager.py  sae.py
kme/: README.md  __init__.py  __main__.py  app.py  config.py  configs.py  crud.py  database.py  encoder.py  error_handler.py  errors.py  kme_app.py  main.py  utils.py
kme/api/: openapi.yaml
kme/channel/: __init__.py  qc.py  qc_server.py
kme/configs/: __init__.py  config.ini  configs.py
kme/controllers/: default_controller.py
kme/database/: __init__.py  database.py  db.py  dbms.py
kme/model/: __init__.py  base_model.py  error.py  errors.py  key.py  key_container.py  key_i_ds.py  key_i_ds_key_i_ds.py  key_ids.py  key_request.py  model.py  new_kme.py  open_session.py  open_session_request.py  open_session_response.py  status.py
kme/models/: base_model_.py  error.py  key.py  key_container.py  key_i_ds.py  key_i_ds_key_i_ds.py  key_request.py  model.py  status.py
kme/orm/: __init__.py  block.py  key.py  keys.py
kme/routers/: dec_keys.py  enc_keys.py  status.py
kme/tests/: conftest.py  examples.py  test_app.py  test_default_controller.py  test_functionalities.py  test_kme.py  test_utils.py  testapp.py
qcs/: README.md  __init__.py  __main__.py  app.py  client.py  config.ini  configs.py  database.py  interface.py  qc_interface.py  qc_simulator.py  resolver.py  server.py  simulator.py
qcs/commands/: __init__.py  command.py  delete_blocks_by_ids.py  flush_blocks.py  get_block_by_id.py  get_blocks.py  get_blocks_by_ids.py  not_found.py
qcs/configs/: __init__.py  configs.py
qcs/model/: __init__.py  block.py  database.py  request.py  resolver.py  response.py
qcs/orm/: __init__.py  block.py
qcs/tests/: conftest.py  examples.py  test_qcsimulator.py
sd_qkd_node/: README.md  __main__.py  kme_app.py  utils.py
sd_qkd_node/channel/: qc_server.py
sd_qkd_node/configs/: __init__.py  config.ini
sd_qkd_node/database/: __init__.py  dbms.py
sd_qkd_node/model/: __init__.py  errors.py  key_request.py  new_kme.py  open_session.py
sd_qkd_node/tests/: examples.py  test_kme.py  test_utils.py
sdn_controller/: README.md  __init__.py  __main__.py  app.py  sdn_app.py  utils.py
sdn_controller/configs/: __init__.py  config.ini  configs.py
sdn_controller/database/: dbms.py
sdn_controller/model/: errors.py  (+3 more)
server/: __main__.py  util.py
stubs/: connexion.pyi  jsons.pyi  webtest.pyi
(+51 files in other folders)
