[tool.pytest.ini_options]
addopts = "-vv --strict-markers -p no:cacheprovider"

[tool.mypy]
strict = true
mypy_path = "stubs"
cache_dir = "/dev/null"

[[tool.mypy.overrides]]
module = "orm.*"
ignore_missing_imports = true

[tool.poetry]
name = "qkd"
version = "0.1.0"
description = "A Quantum Key Delivery System"
authors = ["Nicolò Sala <nicolo4.sala@mail.polimi.it>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = "~0.70.1"
pydantic = "~1.8.2"
uvicorn = "~0.16.0"
databases = "~0.5.3"
orm = "~0.3.1"
aiosqlite = "~0.17.0"
jsons = "~1.6.0"

[tool.poetry.dev-dependencies]
mypy = "~0.930"
pytest = "~6.2.5"
coverage = "^6.2"
pytest-asyncio = "^0.16.0"
httpx = "^0.21.1"
