[tool.pytest.ini_options]
addopts = "-vv --strict-markers -p no:cacheprovider"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
mypy_path = "stubs"
cache_dir = "/dev/null"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = "orm.*"
ignore_missing_imports = true

[tool.poetry]
name = "qkd"
version = "0.1.0"
description = "A Quantum Key Delivery System"
authors = ["Nicolò Sala <nicolo4.sala@mail.polimi.it>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.71.0"
pydantic = "^1.9.0"
uvicorn = "^0.16.0"
jsons = "^1.6.0"
orm = "^0.3.1"
databases = "^0.5.3"
aiosqlite = "^0.17.0"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pytest = "^6.2.5"
coverage = "^6.2"
pytest-asyncio = "^0.16.0"
httpx = "^0.21.1"
pydocstyle = "^6.1.1"
black = "^21.12b0"
flake8 = "^4.0.1"
pylama = "^8.3.6"
