[tool.pytest.ini_options]
addopts = "-vv --strict-markers -p no:cacheprovider --asyncio-mode=strict"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
mypy_path = "stubs"
cache_dir = "/dev/null"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = "orm.*"
ignore_missing_imports = true

[tool.poetry]
name = "qkd"
version = "0.1.0"
description = "A Quantum Key Delivery System"
authors = ["Nicolò Sala <nicolo4.sala@mail.polimi.it>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"
jsons = "^1.6.0"
orm = "^0.3.1"
databases = "^0.5.3"
aiosqlite = "^0.17.0"
asyncpg = "^0.25.0"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
mypy = "^0.941"
pytest = "^7.1.0"
coverage = "^6.2"
pytest-asyncio = "^0.18.0"
black = "^22.0"
